--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Homer J. Simpson"
+resume_name:                    "Blink233"
 resume_title:                   "Nuclear Safety Inspector"
 resume_contact_email:
-  "homerjsimpson@youremailaddress.com"
+  "825384149@qq.com"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
