--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ sass:
 # Resume settings
 resume_avatar:                  "true"
 resume_name:                    "Blink233"
-resume_title:                   "Nuclear Safety Inspector"
+resume_title:                   "滑稽链接"
 resume_contact_email:
   "825384149@qq.com"
 
