--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ resume_section_education:       false
 resume_section_projects:        false
 resume_section_skills:          false
 resume_section_recognition:     false
-resume_section_links:           false
-resume_section_associations:    true
+resume_section_links:           true
+resume_section_associations:    false
 
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
